kubernetes/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: person-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: person-server
  ports:
    - port: 8081         # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
      targetPort: 8081   # Optional field.
