kubernetes/node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: person-node-port
spec:
  type: NodePort
  selector:
    app: person-server
  ports:
    - port: 8081         # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
      targetPort: 8081   # Optional field.
      nodePort: 30007
      name: person-port
