kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: person-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: alsid.person-service.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: person-cluster-ip
                port:
                  number: 8081
